verificación de largo de numero celular ingresado

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -187,7 +187,7 @@
                             </p>
                             <p id="phone-p">
                                 Ingresa tu número de telefono celular:
-                                <input type="text">
+                                <input type="text" id="phone_number">
                                 <button id="sms-btn" type="button" class="btn btn-default btn" disabled>Enviar Código</button>
                             </p>
                             <p id="confirm-sms-p" style="doaplay:none;">
