verificación de largo de numero celular ingresado

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -190,7 +190,7 @@
                                 <input type="text" id="phone_number">
                                 <button id="sms-btn" type="button" class="btn btn-default btn" disabled>Enviar Código</button>
                             </p>
-                            <p id="confirm-sms-p" style="doaplay:none;">
+                            <p id="confirm-sms-p" style="display:none;">
                                 Ingresa el codigo de confirmación que llegó a tu telefono celular:
                                 <input type="text">
                                 <button id="sms-btn" type="button" class="btn btn-default btn" disabled>Finalizar solicitud</button>
