fix: direcciones y blog

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -193,7 +193,10 @@
                             <p id="confirm-sms-p" style="display:none;">
                                 Ingresa el codigo de confirmación que llegó a tu telefono celular:
                                 <input type="text">
-                                <button id="sms-btn" type="button" class="btn btn-default btn" disabled>Finalizar solicitud</button>
+                                <button id="finish-btn" type="button" class="btn btn-default btn" disabled>Finalizar solicitud</button>
+                            </p>
+                            <p id="final-p" style="display:none;">
+                                El usuario ha sido confirmado, Pronto nos pondremos con contacto contigo.
                             </p>
                         </div>
                     </div>
