fix: direcciones y blog

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -192,7 +192,7 @@
                             </p>
                             <p id="confirm-sms-p" style="display:none;">
                                 Ingresa el codigo de confirmación que llegó a tu telefono celular:
-                                <input type="text">
+                                <input type="text" id="confirmation_code">
                                 <button id="finish-btn" type="button" class="btn btn-default btn" disabled>Finalizar solicitud</button>
                             </p>
                             <p id="final-p" style="display:none;">
