--- a/prestapi/templates/home.html
+++ b/prestapi/templates/home.html
@@ -57,9 +57,27 @@
 <div class="arrow-separator arrow-theme"></div>
 <div class="fullwidth colour2 clearfix">
 	<div id="maincont" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
-		<p><strong>Lorem ipsum dolor</strong> sit amet, consectetur adipiscing elit. <a title="" href="#">Donec quis enim nulla</a>. Suspendisse posuere arcu ac eros iaculis egestas commodo risus tempus. Fusce placerat nulla nisi. Proin congue erat non orci adipiscing nec porttitor lacus egestas. <em>Donec venenatis</em>, risus et hendrerit ultrices, libero sem lacinia risus, ut convallis massa sapien nec libero. Suspendisse arcu orci, gravida nec aliquet ut, lacinia non nisl.</p>
-        <h2>Sign up and we'll let you know when we launch</h2>
-        <p>If you would like to receive <strong>news and special offers</strong> please send us your email address below:</p>
+		<h2>
+			Compra ahora, disfruta ahora y paga en 3 meses
+		</h2>
+		<p>
+			<strong>
+				Convierte tus deseos en compras reales, con transparencia total
+				sin costos ocultos y con un interés muy competitivo en el mercado,
+				aprobación 100% online sin filas, sin salir de casa, facilitamos tus compras.
+			</strong>
+		</p>
+		<h2>
+			Adiciona Prestame.la en tu Checkout
+		</h2>
+		<p>
+			<strong>
+				Convierte Vistas en Ventas reales, permite a tus clientes pagar en
+				cuotas esto incrementa tu rate de ventas,  nosotros asumimos el Score
+				y te pagamos al instante, la integración no tiene costo y eleva
+				tu promedio de conversiones.
+			</strong>
+		</p>
 	</div>
 </div>
 <div class="arrow-separator arrow-themelight"></div>
