cambio de nombre de la plantilla

--- a/prestapi/templates/privacy-policy.html
+++ b/prestapi/templates/privacy-policy.html
@@ -7,14 +7,14 @@
     .content{
         width: 800px;
         margin: 40px auto;
-        background: lightgrey;
+        background: rgba(255, 255, 255, 0);
         padding: 25px;
         text-align: justify;
-        border: 1px solid darkgray;
+        border: 1px solid lightgrey;
         border-radius: 5px;
-        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.38);
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.38);
-        box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.38);
+        -webkit-box-shadow: 10px 10px 5px 0 rgba(0,0,0,.38);
+        -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,.38);
+        box-shadow: 10px 10px 5px 0 rgba(0,0,0,.38);
     }
     </style>
 </head>
@@ -106,7 +106,7 @@
         <p>Prestame.la, manifiesta que protege tus datos personales, en virtud de lo dispuesto en la normatividad vigente referente al habeas data. Igualmente, nos permitimos informarte, que tienes por ministerio de la Ley, entre otros, los siguientes derechos: conocer, actualizar y rectificar tus datos personales así como solicitar la eliminación de tus datos personales cuando usted así lo considere siempre que estés al día en tus obligaciones. </p>
         <p>Ley aplicable para nuestro proceso de firma de documentos: Decreto 2364 de 2012 “Por medio del cual se reglamenta el artículo 7 de la Ley 527 de 1999, sobre la firma electrónica y se dictan otras disposiciones”: – Facilitar, incentivar y promover el uso masivo de la firma electrónica en todo tipo de transacciones. – Dar seguridad jurídica a los negocios que se realicen a través de medios electrónicos.</p>
         <p>Por el sólo hecho de acceder a este sitio, los usuarios están aceptando los términos y condiciones aquídefinidos.</p>
-        
+
 
     </div>
 </body>
