cambio de nombre de la plantilla

--- a/prestapi/templates/privacy-policy.html
+++ b/prestapi/templates/privacy-policy.html
@@ -9,6 +9,9 @@
         margin: 40px auto;
         background: rgba(255, 255, 255, 0);
         padding: 25px;
+        color: #606060;
+        font: 16px/1.5em sans-serif;
+        line-height: 1.5em;
         text-align: justify;
         border: 1px solid lightgrey;
         border-radius: 5px;
