--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -143,27 +143,43 @@
                             te identifiques ingresado con tu cuenta de Facebook
                             o de LinkedIn.
                             <div class="row">
-                                <div class="social-lg-btn pull-left">
-                                    <a class="facebook-login btn btn-block btn-lg btn-social btn-facebook">
-                                        <span class="fa fa-facebook"></span> Ingresar con Facebook
-                                    </a>
+                                <div class="facebook_btn pull-left ">
+                                    <div class="social-lg-btn pull-left">
+                                        <a class="facebook-login btn btn-block btn-lg btn-social btn-facebook">
+                                            <span class="fa fa-facebook"></span> Ingresar con Facebook
+                                        </a>
+                                    </div>
+                                    <div class="pull-left fb-loading-icon">
+                                        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+                                    </div>
+                                    <div class="pull-left fb-completed-icon">
+                                        <i class="fa fa-check" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="pull-left fb-error-icon">
+                                        <i class="fa fa-times" aria-hidden="true"></i>
+                                    </div>
                                 </div>
-                                <div class="pull-left fb-loading-icon">
-                                    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-                                </div>
-                                <div class="pull-left fb-completed-icon">
-                                    <i class="fa fa-check" aria-hidden="true"></i>
+                                <div class="linkedin_btn pull-left ">
+                                    <div class="social-lg-btn pull-left">
+                                        <a class="btn btn-block btn-lg btn-social btn-linkedin">
+                                            <span class="fa fa-linkedin"></span> Ingresar con LinkedIn
+                                        </a>
+                                    </div>
+                                    <div class="pull-left li-loading-icon">
+                                        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+                                    </div>
+                                    <div class="pull-left li-completed-icon">
+                                        <i class="fa fa-check" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="pull-left li-error-icon">
+                                        <i class="fa fa-times" aria-hidden="true"></i>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="social-lg-btn pull-left">
-                                    <a class="btn btn-block btn-lg btn-social btn-linkedin">
-                                        <span class="fa fa-linkedin"></span> Ingresar con LinkedIn
-                                    </a>
-                                </div>
-                                <div class="pull-left li-loading-icon">
-                                    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-                                </div>
+                            <div class="inscription">
+                                <form class="" action="index.html" method="post">
+                                    <input type="text" name="test" value="test">
+                                </form>
                             </div>
                             <div class="row" style="padding: 15px 30px;">
                                 <button id="continuar2" type="button" class="btn btn-default btn-lg" disabled>Continuar</button>
