--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -179,8 +179,8 @@
                             <div class="inscription">
                                 <form class="form-horizontal">
                                     <div class="form-group">
-                                        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                                        <div class="col-sm-10">
+                                        <label for="inputEmail3" class="col-sm-12">Email</label>
+                                        <div class="col-sm-12">
                                             <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                                         </div>
                                     </div>
