--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -178,7 +178,7 @@
                             </div>
                             <div class="inscription">
                                 <form class="form-horizontal">
-                                    <div class="form-group">
+                                    <div class="form-group col-sm-12">
                                         <label for="inputEmail3" class="col-sm-12">Email</label>
                                         <div class="col-sm-12">
                                             <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
