--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -178,13 +178,13 @@
                             </div>
                             <div class="inscription">
                                 <form class="form-horizontal">
-                                    <div class="form-group col-sm-12">
+                                    <div class="form-group row">
                                         <label for="inputEmail3" class="col-sm-12">Email</label>
                                         <div class="col-sm-12">
                                             <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                                         </div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group row">
                                         <div class="col-sm-6">
                                             <label for="inputPassword3" class="col-sm-12 control-label">Password</label>
                                             <div class="col-sm-12">
