send_sms function

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -490,9 +490,10 @@
         </footer>
     </div>
     <script src="{% static 'js/fb.js' %}" charset="utf-8"></script>
-    <script src="{% static 'js/index.js' %}" charset="utf-8"></script>
+    <script src="{% static 'js/sinch.min.js' %}" charset="utf-8"></script>
     <script src="{% static 'js/bootstrap-datepicker.min.js' %}" charset="utf-8"></script>
     <script src="{% static 'js/jquery.validate.min.js' %}" charset="utf-8"></script>
+    <script src="{% static 'js/index.js' %}" charset="utf-8"></script>
 
     <script type="text/javascript">
     $(function() {
