--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -493,16 +493,16 @@
     function ajax_get_score(){
         data = {
             'csrfmiddlewaretoken': $('input[name="csrfmiddlewaretoken"]').val(),
-            'user_email': 'Test_user_email',
-            'user_password': 'Test_user_password',
+            'user_email': 'pruebas@pruebas.com',
+            'user_password': '1026585454',
             'document_type': 'Test_document_type',
             'document_id': 'Test_document_id',
             'first_name': 'Test_first_name',
             'second_name': 'Test_second_name',
             'last_name': 'Test_last_name',
             'second_last_name': 'Test_second_last_name',
-            'expedition_date': 'Test_expedition_date',
-            'birthdate': 'Test_birthdate',
+            'expedition_date': '2000-05-20',
+            'birthdate': '1991-05-20',
             'gender': 'Test_gender',
             'email': 'Test_email',
             'phone': 'Test_phone',
