--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -505,7 +505,7 @@
             'birthdate': '1991-05-20',
             'gender': 'm',
             'email': 'ryuuzakiupldr@gmail.com',
-            'phone': 'Test_phone',
+            'phone': 3015917476,
             'civil_status': 'Test_civil_status',
             'address_residence': 'Test_address_residence',
             'type_of_property': 'Test_type_of_property',
@@ -515,7 +515,7 @@
             'personal_reference_second_name': 'Test_personal_reference_second_name',
             'personal_reference_last_name': 'Test_personal_reference_last_name',
             'personal_reference_second_last_name': 'second_last_name',
-            'personal_reference_phone': 301917476,
+            'personal_reference_phone': 3015917476,
             'personal_reference_city' : 'Bogotá'
         }
         var jqxhr = $.post('{% url 'api:ajax_get_score'%}', data, function() {
