--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -204,7 +204,7 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="document_type" id="document_type" required>
                                                     <option value="">Seleccione un tipo de documento</option>
-                                                    <option value="1" default>C.C</option>
+                                                    <option value="1" selected>C.C</option>
                                                     <option value="2">C.E</option>
                                                 </select>
                                             </div>
@@ -232,7 +232,7 @@
                                                 <select class="form-control" name="gender" id="gender" required>
                                                     <option value="">Seleccione un tipo género</option>
                                                     <option value="f">Femenino</option>
-                                                    <option value="m" default>Masculino</option>
+                                                    <option value="m" selected>Masculino</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -266,7 +266,7 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="civil_status" id="civil_status" required>
                                                     <option value="">Seleccione un estado</option>
-                                                    <option value="1" default>Soltero(a)</option>
+                                                    <option value="1" selected>Soltero(a)</option>
                                                     <option value="2">Casado(a)</option>
                                                     <option value="3">Union Libre</option>
                                                     <option value="4">Divorciado(a)</option>
@@ -280,7 +280,7 @@
                                                     <option value="">Seleccione un nivel</option>
                                                     <option value="1">Media (secundaria)</option>
                                                     <option value="2">Tecnico o Tecnologo</option>
-                                                    <option value="3" default>Pregrado</option>
+                                                    <option value="3" selected>Pregrado</option>
                                                     <option value="4">Postgrado</option>
                                                     <option value="5">Maestria</option>
                                                 </select>
@@ -293,7 +293,7 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="vehicle" id="vehicle" required>
                                                     <option value="">Seleccione un estado</option>
-                                                    <option value="1" default>si</option>
+                                                    <option value="1" selected>si</option>
                                                     <option value="2">no</option>
                                                 </select>
                                             </div>
@@ -314,7 +314,7 @@
                                                     <option value="">Seleccione un tipo</option>
                                                     <option value="1">Propia</option>
                                                     <option value="2">Familiar</option>
-                                                    <option value="3" default>En Arriendo</option>
+                                                    <option value="3" selected>En Arriendo</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -324,7 +324,7 @@
                                                 <select class="form-control" name="time_in_property" id="time_in_property" required>
                                                     <option value="">Seleccione un estado</option>
                                                     <option value="1">Menor a 1 año</option>
-                                                    <option value="2" default>de 1 a 5 años</option>
+                                                    <option value="2" selected>de 1 a 5 años</option>
                                                     <option value="3">de 5 a 10 años</option>
                                                     <option value="4">Mayor a 10 años</option>
                                                 </select>
@@ -339,7 +339,7 @@
                                                 <select class="form-control" name="work_activity" id="work_activity" required>
                                                     <option value="">Seleccione una actividad</option>
                                                     <option value="1">Empleado(a)</option>
-                                                    <option value="2" default>Independiente</option>
+                                                    <option value="2" selected>Independiente</option>
                                                     <option value="3">Estudiante</option>
                                                     <option value="4">Pensionado(a)</option>
                                                 </select>
@@ -361,7 +361,7 @@
                                                 <select class="form-control" name="time_in_work" id="time_in_work" required>
                                                     <option value="">Seleccione una opción</option>
                                                     <option value="">Menor a 1 año</option>
-                                                    <option value="" default>de 1 a 5 años</option>
+                                                    <option value="" selected>de 1 a 5 años</option>
                                                     <option value="">de 5 a 10 años</option>
                                                     <option value="">Mayor a 10 años</option>
                                                 </select>
@@ -414,7 +414,7 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="favorite_bank" id="favorite_bank" required>
                                                     <option value="">Seleccione una opción</option>
-                                                    <option value="1" default>Bancolombia</option>
+                                                    <option value="1" selected>Bancolombia</option>
                                                     <option value="2">Davivienda</option>
                                                     <option value="3">BBVA</option>
                                                     <option value="4">Puntos Baloto</option>
